update new info

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LyhourNY</title>
   </head>
-  <body class="font-sans text-gray-700 dark:text-dark-text relative">
+  <body class="font-sans bg-gray-50 text-gray-700 dark:text-dark-text dark:bg-dark-background relative">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
